# gram-ai-rust

./: .gitignore  Cargo.toml  README.md
examples/: basic.rs  chat.rs  tools.rs
src/: agent.rs  error.rs  event.rs  lib.rs  memory.rs  provider.rs  state.rs  tool.rs  tools.rs
src/provider/: gemini.rs  ollama.rs  openai.rs
