[package]
name = "grami-sdk"
version = "0.1.0"
edition = "2021"
description = "An asynchronous AI agent SDK for social media management"
license = "MIT"

[[example]]
name = "basic"
path = "examples/basic.rs"

[dependencies]
tokio = { version = "1.32", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
uuid = { version = "1.4", features = ["v4", "serde"] }
dotenv = "0.15"
chrono = "0.4.38"
parking_lot = "0.12"
regex = "1.10"

[dev-dependencies]
tokio-test = "0.4"
